--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,78 @@ input,
 button {
   @apply focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-neutral-400 focus-visible:ring-offset-2 focus-visible:ring-offset-neutral-50 dark:focus-visible:ring-neutral-600 dark:focus-visible:ring-offset-neutral-900;
 }
+
+.text-h1 {
+  font-family: 'Inter Display', 'Inter Display Placeholder', sans-serif;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: -0.045em;
+  line-height: 1.1em;
+  text-align: start;
+  text-decoration: none;
+  text-transform: none;
+  text-wrap: balance;
+}
+
+.text-h1-light {
+  font-family: 'Inter Display', 'Inter Display Placeholder', sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: -0.005em;
+  line-height: 1.35em;
+  text-align: start;
+  text-decoration: none;
+  text-transform: none;
+  margin-top: 30px;
+}
+
+.text-title-banner {
+  font-family: 'Inter Display', 'Inter Display Placeholder', sans-serif;
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 600;
+  letter-spacing: -0.03em;
+  line-height: 1.2em;
+  text-align: start;
+  text-decoration: none;
+  text-transform: none;
+}
+
+.text-title-section {
+  font-family: 'Inter Display', 'Inter Display Placeholder', sans-serif;
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: -0.045em;
+  line-height: 1.2em;
+  text-align: start;
+  text-decoration: none;
+  text-transform: none;
+}
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;  /* Para Internet Explorer y Edge */
+    scrollbar-width: none;     /* Para Firefox */
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;             /* Para Chrome, Safari y Opera */
+  }
+}
+
+@media (max-width: 640px) {
+  .text-h1 {
+    font-size: 35px;
+    font-weight: 500;
+  }
+
+  .text-h1-light {
+    font-size: 18px;
+  }
+
+  .text-title-section {
+    font-size: 35px;
+  }
+}
