--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -21,7 +23,7 @@ button {
 }
 
 .text-h1 {
-  font-family: 'Inter Display', 'Inter Display Placeholder', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 64px;
   font-style: normal;
   font-weight: 500;
@@ -34,7 +36,7 @@ button {
 }
 
 .text-h1-light {
-  font-family: 'Inter Display', 'Inter Display Placeholder', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -47,8 +49,8 @@ button {
 }
 
 .text-title-banner {
-  font-family: 'Inter Display', 'Inter Display Placeholder', sans-serif;
-  font-size: 35px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 600;
   letter-spacing: -0.03em;
@@ -59,8 +61,8 @@ button {
 }
 
 .text-title-section {
-  font-family: 'Inter Display', 'Inter Display Placeholder', sans-serif;
-  font-size: 42px;
+  font-family: 'Poppins', sans-serif;   
+  font-size: 2.3rem;
   font-style: normal;
   font-weight: 400;
   letter-spacing: -0.045em;
@@ -68,7 +70,22 @@ button {
   text-align: start;
   text-decoration: none;
   text-transform: none;
+
 }
+
+
+
+
+/* Swiper */
+.swiper-pagination-bullet {
+background: white !important;
+width: 15px !important;
+height: 15px !important;
+border: 1px solid black !important;
+}
+
+
+
 @layer utilities {
   .scrollbar-hide {
     -ms-overflow-style: none;  /* Para Internet Explorer y Edge */
@@ -93,4 +110,8 @@ button {
   .text-title-section {
     font-size: 35px;
   }
+}
+
+html {
+  scroll-behavior: smooth;
 }
